Lab 2/part1/autograder/subs/A0285757B/results.out
utils.c:3:5: error: conflicting types for ‘sum’
    3 | int sum(int sum_array[], int n) {
      |     ^~~
utils.h:2:8: note: previous declaration of ‘sum’ was here
    2 | double sum(int [], int);
      |        ^~~
